--- a/index.html
+++ b/index.html
@@ -7,38 +7,48 @@
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
-    <section class="hidden">
-        <h1>Message <span style="color:aquamarine;">Encryptor</span>/<span style="color: aqua;">Decryptor</span></h1>
-    </section>
+    <div class="section__container">
+        <section id="s1">
+            <h1 data-aos="fade" data-aos-delay="0">
+                <span style="color:aquamarine;">Encryptor</span>/<span style="color: aqua;">Decryptor</span>
+            </h1>
+        </section>
 
-    <section class="hidden">
-        <div id="encodeSection">
-            <h2>Encrypt any Message Here</h2><br>
-            <div style="display: grid; place-items: center;">
-                <input type="text" id="encodeInput" placeholder="Enter your message"><br>
-                <div class="button-container">
-                    <button onclick="encodeMessage()">Encode</button>
-                    <button onclick="copyEncodedMessage()">Copy</button>
+        <section id="s2">
+            <div data-aos="fade" data-aos-delay="150" id="encodeSection">
+                <h2>Encrypt any Message Here:</h2><br>
+                <div style="display: grid; place-items: center;">
+                    <input type="text" id="encodeInput" placeholder="Enter your message"><br>
+                    <div class="button-container">
+                        <button onclick="encodeMessage()">Encode</button>
+                        <button onclick="copyEncodedMessage()">Copy</button>
+                    </div>
+                    <p id="encodedMessage"></p>
                 </div>
-                <p id="encodedMessage"></p>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="hidden">
-        <div id="decodeSection">
-            <h2>Decrypt an Encrypted Message Here</h2><br>
-            <div style="display: grid; place-items: center;">
-                <input type="text" id="decodeInput" placeholder="Enter the encoded message"><br>
-                <div class="button-container">
-                    <button onclick="decodeMessage()">Decode</button>
-                    <button onclick="copyDecodedMessage()">Copy</button>
+        <section>
+            <div data-aos="fade" data-aos-delay="150" id="decodeSection">
+                <h2>Decrypt Encrypted Message Here:</h2><br>
+                <div style="display: grid; place-items: center;">
+                    <input type="text" id="decodeInput" placeholder="Enter the encoded message"><br>
+                    <div class="button-container">
+                        <button onclick="decodeMessage()">Decode</button>
+                        <button onclick="copyDecodedMessage()">Copy</button>
+                    </div>
+                    <p id="decodedMessage"></p>
                 </div>
-                <p id="decodedMessage"></p>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
